# owart

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
owart/: __init__.py  cli.py
