[project]
name = "owart"
version = "0.1.0"
description = "Poster-style visualizations of neural network weights."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx>=0.30.1",
    "mlx-lm>=0.21.0",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
owart = "owart.cli:main"

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"
